Update README with comprehensive project documentation
Co-Authored-By: hanmahong5-arch <hanmahong5@gmail.com>